--- a/app/views/shared/_menu_bar.html.erb
+++ b/app/views/shared/_menu_bar.html.erb
@@ -1,2 +1,3 @@
+<p>Logged in as <%= @user.email %>.</p>
 <%= link_to 'log out', destroy_user_session_path, data: { "turbo-method": :delete,
                                                           turbo_confirm: "You sure?" } %>
